feat: setup basic TicTacToe component with board rendering

--- a/src/components/tic-tac-toe/tic-tac-toe.sass
+++ b/src/components/tic-tac-toe/tic-tac-toe.sass
@@ -1,7 +1,9 @@
-.game 
-     .board
-          display:flex
-          justify-content: center
-          algin-items: center
-          flex-direction: column
-          gap: 10ps
+.game
+  .board
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    gap: 10p
+
+    
