--- a/src/components/tic-tac-toe/tic-tac-toe.sass
+++ b/src/components/tic-tac-toe/tic-tac-toe.sass
@@ -4,6 +4,24 @@
     justify-content: center
     align-items: center
     flex-direction: column
-    gap: 10p
+    gap: 10px
 
-    
+    .board_row
+      display: flex
+      gap: 10px
+
+      .cell
+        width: 100px
+        height: 100px
+        border-radius: 0
+        border: none
+        text-align: center
+        vertical-align: middle
+        font-size: 50px
+        font-weight: 700
+        background-color: #f2f2f2
+        outline: none
+        margin-bottom: 10px
+
+        &:hover
+          color: inherit
